--- a/src/main/webapp/css/Main.css
+++ b/src/main/webapp/css/Main.css
@@ -4,74 +4,194 @@
 	padding:0;
 }
 /* 화면 전체 렙 */
+body{
+	height: 100%;
+	width:100%;
+	margin:0;
+	font-family:"Helvetica";
+}
 .wrapper{
-	width: 1900px;
+	width: 100%;
 }
 /* content 랩 */
 .wrap{
-	width : 1080px;
+	width : 100%;
 	margin: auto;
 }
 /* 로고, 검색, 로그인 */
 .top_area{
 	width: 100%;
-    height: 150px;
+    height: 100px;
     /* background-color: #f7f0b9; */
+
 }
 /* 로고 영역 */
 .logo_area{
 	width: 25%;
 	height: 100%;
-	background-color: red;
 	float:left;
+	object-fit: cover;
+	text-align: center;
+}
+.logo_area img{
+	width:100%;
+	height: 100%;
+	max-width:100%;
+	max-height:100%;
+
 }
 /* 검색 박스 영역 */
-.search_area{
+.search{
 	width: 50%;
-	height: 100%;
-	background-color: yellow;
-	float:left;	
+    height: 100px;
+	position: relative;
+	text-align:center;
+	margin: 0 auto;
+	float: left;
 }
+.search-box{
+	width:100%;
+	position: absolute;
+    height: 70px;
+    	top:30%;
+}
+.search input {
+	
+	width:100%;
+  border-radius: 20px;
+  border: 1px solid #bbb;
+padding: 10px 12px;
+  font-size: 14px;
+  
+}
+
+search img {
+	position: absolute;
+  width:10px;
+  top: 10px;
+  right: 5px;
+  margin: 0;
+}
+
+
+
 /* 로그인 버튼 영역 */
 .login_area{
 	width: 25%;
-	height: 100%;
-	display: inline-block;	
-	text-align: center;		
+    height: 100px;
+	float:left;
+	padding:0;
 }
-.login_button{
-	height: 50%;
-    background-color: #D4DFE6;
-    margin-top: 30px;
-    line-height: 77px;
-    font-size: 40px;
-    font-weight: 900;
-    border-radius: 10px;
-    cursor: pointer;	
+.login_area ul {
+	list-style-type:none;
+	text-align:center;
+	}
+	
+.login_area li {
+	text-align:center;
+	width:33%;
+	float:left;
+
 }
-.login_area>span{
-	margin-top: 10px;
-    font-weight: 900;
-    display: inline-block;
+.login_area a {
+	line-height:100px;
+	text-decoration: none;
+  color: black;
+  font-size: 15px;
+  
 }
-.login_button{
-	height : 50%;
-	background-color: #D4DFE6;
-	margin-top:30px;
+.login_area li a:hover{
+	  font-style: bold;
+	
 }
 
 /* 제품 목록 네비 */
+
 .navi_bar_area{
 	width: 100%;
-    height: 70px;
-    background-color: #7696fd;
+    height: 50px;
+    overflow:hidden;
+    background-color: #2d2d2d;
+}
+.clearfix ul{
+	list-style: none;
+	line-height:50px;
+	height: 50px;
+	display: table;
+	
 }
 
+.clearfix li{
+	width:20%;
+	float: left;
+	line-height: 50px;
+	background-color: #2d2d2d;
+	text-align:center;
+}
+
+.menuLink{
+	width:100%;
+	color: white;
+	font-size:15px;
+	float : left;
+
+}
+/*메인 이미지 */
+
+.sum_img{
+	height: 450px;
+	width: 100%;
+		margin-bottom: 20px;
+	
+}
+.main_img{
+	height: 100%;
+ 	width: 100%;
+}
+h1{
+	text-align: center;
+	width: 100%;
+  font-size: 24px;
+  font-style: bold;
+  color: #545454;
+  
+}
 /* 홈페이지 메인 제품 목록  */
+
 .content_area{
 	width: 100%;
-    background-color: #97ef97;
     height: 1000px;
+    margin-top:20px;
+}
+
+.products {
+  margin:0 auto;
+  padding: 0;
+ width: 100%;
+  text-align: center;
+
+}
+
+.products img{
+  width: 255px;
+  height: 255px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+ 
+}
+
+.products a{
+  text-decoration: none;
+  color: black;
+ /* float: left;*/
+  font-size: 16px;
+  display:inline-block;
+
+}
+
+.price{
+  margin-top: 4px;
+  margin-bottom: 80px;
 }
 
 /* float 속성 해제 */
