메인화면 구현 / 메인 css 공지사항 db연결

--- a/src/main/webapp/css/Main.css
+++ b/src/main/webapp/css/Main.css
@@ -27,14 +27,14 @@ body{
 }
 /* 로고 영역 */
 .logo_area{
-	width: 25%;
+	width: 20%;
 	height: 100%;
 	float:left;
 	object-fit: cover;
 	text-align: center;
 }
 .logo_area img{
-	width:100%;
+	width:50%;
 	height: 100%;
 	max-width:100%;
 	max-height:100%;
@@ -53,31 +53,28 @@ body{
 	width:100%;
 	position: absolute;
     height: 70px;
-    	top:30%;
+    top:30%;
 }
 .search input {
 	
-	width:100%;
-  border-radius: 20px;
-  border: 1px solid #bbb;
-padding: 10px 12px;
-  font-size: 14px;
-  
+	width:80%;
+	border-radius: 20px;
+	border: 1px solid #bbb;
+	padding: 10px 10px;
+	font-size: 14px;
 }
 
 search img {
 	position: absolute;
-  width:10px;
-  top: 10px;
-  right: 5px;
-  margin: 0;
+	width:10px;
+	top: 10px;
+	right: 5px;
+	margin: 0;
 }
-
-
 
 /* 로그인 버튼 영역 */
 .login_area{
-	width: 25%;
+	width: 30%;
     height: 100px;
 	float:left;
 	padding:0;
@@ -96,12 +93,12 @@ search img {
 .login_area a {
 	line-height:100px;
 	text-decoration: none;
-  color: black;
-  font-size: 15px;
+	color: black;
+	font-size: 15px;
   
 }
 .login_area li a:hover{
-	  font-style: bold;
+	font-style: bold;
 	
 }
 
@@ -122,7 +119,7 @@ search img {
 }
 
 .clearfix li{
-	width:20%;
+	width:14%;
 	float: left;
 	line-height: 50px;
 	background-color: #2d2d2d;
@@ -136,24 +133,25 @@ search img {
 	float : left;
 
 }
+
 /*메인 이미지 */
 
 .sum_img{
 	height: 450px;
 	width: 100%;
-		margin-bottom: 20px;
-	
+	margin-bottom: 20px;
+	text-align: center;
 }
 .main_img{
 	height: 100%;
- 	width: 100%;
+ 	width: 95%;
 }
 h1{
 	text-align: center;
 	width: 100%;
-  font-size: 24px;
-  font-style: bold;
-  color: #545454;
+	font-size: 24px;
+	font-style: bolder;
+	color: #545454;
   
 }
 /* 홈페이지 메인 제품 목록  */
@@ -165,17 +163,16 @@ h1{
 }
 
 .products {
-  margin:0 auto;
-  padding: 0;
- width: 100%;
-  text-align: center;
-
+	margin:0 auto;
+	padding: 0;
+	width: 100%;
+	text-align: center;
 }
 
 .products img{
   width: 255px;
   height: 255px;
-  margin-right: 20px;
+  margin: 10px 10px;
   margin-bottom: 20px;
  
 }
