--- a/src/main/webapp/css/Main.css
+++ b/src/main/webapp/css/Main.css
@@ -109,21 +109,23 @@ search img {
     height: 50px;
     overflow:hidden;
     background-color: #2d2d2d;
+    text-align:center;
 }
-.clearfix ul{
-	list-style: none;
+.clearfix {
+	/*list-style: none;*/
+	width:800px;
+	margin :0 auto;
 	line-height:50px;
 	height: 50px;
 	display: table;
-	
 }
 
 .clearfix li{
-	width:14%;
+	width:25%;
 	float: left;
 	line-height: 50px;
-	background-color: #2d2d2d;
-	text-align:center;
+	list-style: none;
+	
 }
 
 .menuLink{
@@ -135,7 +137,9 @@ search img {
 }
 
 /*메인 이미지 */
-
+products{
+	 max-width: 1000px;
+}
 .sum_img{
 	height: 450px;
 	width: 100%;
@@ -159,19 +163,19 @@ h1{
 .content_area{
 	width: 100%;
     height: 1000px;
-    margin-top:20px;
+    margin-top:30px;
 }
 
 .products {
 	margin:0 auto;
 	padding: 0;
-	width: 100%;
+	width: 90%;
 	text-align: center;
 }
 
 .products img{
-  width: 255px;
-  height: 255px;
+  width: 280px;
+  height: 400px;
   margin: 10px 10px;
   margin-bottom: 20px;
  
