--- a/src/main/webapp/css/notion.css
+++ b/src/main/webapp/css/notion.css
@@ -3,26 +3,29 @@
 #wrap{
 	/* 1024*768로 해상도를 맞춰서 설계*/
 	width:971px;
-	margin:0;
+	margin-top: 50px;
 	margin-left: auto;
 	margin-right: auto;
 }
 h1{
+	margin-bottom :20px;
 	color: black;
 }
 table{
 	width: 100%;
 	border-collapse: collapse;
-	font-size :12px;
-	line-height: 24px; /*줄간격*/
-}
-table td, th {
+	font-size :13px;
+	line-height: 25px; /*줄간격*/
+}   
+table td {
 	border: #d3d3d3 solid 1px;/*경계선 색상 스타일 굵기*/
 	padding: 5px; /*안쪽 여백*/
 }
 th {
-	background: black;
+    background-color: #2d2d2d;
 	width: 120px;
+	color: white;
+	border-color: white;	/*보더 외곽선 색상*/
 }
 img{
 	width: 220px;
