로그인/회원가입/아이디찾기/관리자로그인/로그인화면띄우기

--- a/src/main/webapp/css/signup.css
+++ b/src/main/webapp/css/signup.css
@@ -20,14 +20,12 @@ body {
   background-color:#FFFFFF;
   text-align:center;
   margin:0 auto;
-  margin-top:10%;
-
-	
+  margin-top:10%;	
 }
 
-.joinForm h2 {
+.signup-form h2 {
   text-align: center;
-  margin: 30px;
+  margin-bottom: 30px;
 }
 
 .textForm {
@@ -88,6 +86,26 @@ body {
 }
 
 .cellphoneNo {
+  width: 100%;
+  border:none;
+  outline:none;
+  color: #636e72;
+  font-size:16px;
+  height:25px;
+  background: none;
+}
+
+.addr {
+  width: 100%;
+  border:none;
+  outline:none;
+  color: #636e72;
+  font-size:16px;
+  height:25px;
+  background: none;
+}
+
+.detailaddr {
   width: 100%;
   border:none;
   outline:none;
