--- a/src/main/webapp/css/login.css
+++ b/src/main/webapp/css/login.css
@@ -1,22 +1,29 @@
 @charset "UTF-8";
+* {
+  margin: 0px;
+  padding: 0px;
+  text-decoration: none;
+  font-family:sans-serif;
 
-*{
-	margin:0;
-	padding:0;
 }
 
-body{
-	font-family: 'Noto Sans KR', sans-serif;
-		
-	
+body {
+  background-image:#34495e;
+  width:100%;
+  height:100%;
 }
+
 .login-wrapper{
 
-	display: flex;
-	justify-content : center;
-	align-items: center;
-	height: 100vh;
-	
+  width:400px;
+  height:400px;
+  padding: 30px, 20px;
+  background-color:#FFFFFF;
+  text-align:center;
+  margin:0 auto;
+  margin-top:10%;
+
+
 }
 .login-form h1{
 	font-size: 32px;
@@ -24,5 +31,7 @@ body{
 	margin-bottom: 50px;
 }
 .textForm{
-	boder-bottom: 2px solid #adadad;
+  border-bottom: 2px solid #adadad;
+  margin: 30px;
+  padding: 10px 10px;
 }
